force-app/main/default/objects/ServiceQuestion__c/ServiceQuestion__c.object-meta.xml
<CustomObject>
    <description>Service Question relates one or more Questions to a Service and defines how the questions are rendered when building a Project Service. Service Question is related to Service, Question, and Project Service Question.</description>
    <label>Service Question</label>
    <nameField>
        <displayFormat>SQ-{00000000}</displayFormat>
        <label>Service Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>