force-app/main/default/objects/ServiceQuestion__c/fields/CanRemove__c.field-meta.xml
<CustomField>
    <fullName>CanRemove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Remove</label>
    <type>Checkbox</type>
</CustomField>