force-app/main/default/objects/ServiceQuestion__c/fields/HintLock__c.field-meta.xml
<CustomField>
    <fullName>HintLock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HintLock</label>
    <type>Checkbox</type>
</CustomField>