force-app/main/default/objects/ServiceQuestion__c/fields/ItemQuestion__c.field-meta.xml
<CustomField>
    <fullName>ItemQuestion__c</fullName>
    <formula>Question__r.ItemQuestion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Question</label>
    <type>Checkbox</type>
</CustomField>