force-app/main/default/objects/ServiceQuestion__c/fields/MaxValue__c.field-meta.xml
<CustomField>
    <fullName>MaxValue__c</fullName>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>