force-app/main/default/objects/ServiceQuestion__c/fields/NumberofDefinedResponses__c.field-meta.xml
<CustomField>
    <fullName>NumberofDefinedResponses__c</fullName>
    <label>Number of Defined Responses</label>
    <summaryFilterItems>
        <field>ServiceQuestionDefinedResponse__c.isActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ServiceQuestionDefinedResponse__c.ServiceQuestion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>