force-app/main/default/objects/ServiceQuestion__c/fields/NumberofJumps__c.field-meta.xml
<CustomField>
    <fullName>NumberofJumps__c</fullName>
    <label>Number of Jumps</label>
    <summaryFilterItems>
        <field>ServiceQuestionDefinedResponse__c.JumpToAction__c</field>
        <operation>equals</operation>
        <value>QUESTION</value>
    </summaryFilterItems>
    <summaryForeignKey>ServiceQuestionDefinedResponse__c.ServiceQuestion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>