force-app/main/default/objects/ServiceQuestion__c/fields/ParentServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ParentServiceQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Service Question</label>
    <referenceTo>ServiceQuestion__c</referenceTo>
    <relationshipLabel>Service Questions</relationshipLabel>
    <relationshipName>ParentServiceQuestionID</relationshipName>
    <type>Lookup</type>
</CustomField>