force-app/main/default/objects/ServiceQuestion__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Service Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>