force-app/main/default/objects/ServiceQuestion__c/fields/QuestionIndentation__c.field-meta.xml
<CustomField>
    <fullName>QuestionIndentation__c</fullName>
    <label>Question Indentation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>