force-app/main/default/objects/ServiceQuestion__c/fields/QuestionNumber__c.field-meta.xml
<CustomField>
    <fullName>QuestionNumber__c</fullName>
    <label>Question Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>