force-app/main/default/objects/ServiceQuestion__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <label>UniqueKey</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>