force-app/main/default/objects/ServiceQuestion__c/validationRules/BranchingQuestionCannotBeOptional.validationRule-meta.xml
<ValidationRule>
    <fullName>BranchingQuestionCannotBeOptional</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(QuestionType__c == &#39;Single-Select List&#39;,QuestionType__c == &#39;Yes/No&#39; ), ISPICKVAL(JumpToAction__c, &#39;BRANCH&#39;), Optional__c )</errorConditionFormula>
    <errorMessage>Branching question cannot be optional.</errorMessage>
</ValidationRule>