force-app/main/default/objects/ServiceQuestion__c/validationRules/ExceptionQuestionCannotBeOptional.validationRule-meta.xml
<ValidationRule>
    <fullName>ExceptionQuestionCannotBeOptional</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Question__r.ExceptionQuestion__c,Optional__c)</errorConditionFormula>
    <errorMessage>Exception Question cannot be optional</errorMessage>
</ValidationRule>