force-app/main/default/objects/ServiceQuestion__c/validationRules/validateOneActiveResponse.validationRule-meta.xml
<ValidationRule>
    <fullName>validateOneActiveResponse</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( NOT(ISNEW()), NumberofDefinedResponses__c &lt; 2, OR(QuestionType__c == &#39;Single-Select List&#39;,QuestionType__c ==&#39;Multi-Select List&#39; ))</errorConditionFormula>
    <errorMessage>There should be at least two (2) active Defined Responses for this question.</errorMessage>
</ValidationRule>