force-app/main/default/objects/ServiceQuestion__c/listViews/For_Test.listView-meta.xml
<ListView>
    <fullName>For_Test</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <label>For Test</label>
</ListView>